# ml-examples

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  nox.yml  pylint.yml  pytest.yml  stale.yml
docs/: CODE_OF_CONDUCT.md
docs/ISSUE_TEMPLATE/: bug.yml
examples/: __main__.py  e10_serialization.py  e11_custom_models.py  e12_time_series_features.py  e13_feature_analysis.py  e13_feature_selection.py  e1_create_dataset.py  e2_train_models.py  e3_metrics.py  e4_cross_validation.py  e4_model_testing.py  e5_recording_scores.py  e6_hyperparameter_optimization.py  e7_nested_cross_validation.py  e8_handling_models.py  e9_pipelines.py
src/: __init__.py  __main__.py  e10_serialization.py  e11_custom_models.py  e12_time_series_features.py  e13_feature_analysis.py  e14_pytorch.py  e1_create_dataset.py  e2_train_models.py  e3_metrics.py  e4_model_testing.py  e5_recording_scores.py  e6_hyperparameter_optimization.py  e7_nested_cross_validation.py  e8_handling_models.py  e9_pipelines.py
src/automl/: __init__.py
src/automl/auto_sklearn_/: Dockerfile  README.md  __init__.py  auto_sklearn_example.py
src/automl/gluonts_/: __init__.py  gluonts_example.py
src/ml/: __main__.py  e10_serialization.py  e11_custom_models.py  e12_time_series_features.py  e13_feature_analysis.py  e14_pytorch.py  e2_train_models.py  e3_metrics.py  e4_model_testing.py  e5_recording_scores.py  e6_hyperparameter_optimization.py  e7_nested_cross_validation.py  e8_handling_models.py  e9_pipelines.py
src/tests/: test_exercises.py
tests/: noxfile.py  test_exercises.py
